--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.2.1",
+        "express-validator": "^6.10.0",
         "mysql": "^2.18.1",
         "request": "^2.88.2"
     }
